feat - various UI improvements - set references as simple list - improved takeawys display - exclude style from sitemap - (WIP) set correctly sized OG image

--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,5 +1,5 @@
 <footer class="site-footer" data-layout="switcher" data-props="invert">
-    <div class="padded-container" data-layout="switcher">
+    <div class="padded-container" data-layout="switcher" data-props="y:start">
         <div data-layout="stack" data-props="x:start">
             <h2 data-heading="5">About</h2>
             <p>{{ about or meta.site_description }}</p>
