--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,8 +1,7 @@
-<li class="story-card" data-layout="stack" data-props="space:xs">
+<li class="story-card">
     {% set color = entry.category.color%}
-    {{color | log}}
     <div class="story-card__cover" data-font="emoji" data-color="{{color}}" aria-hidden="true">
-        <span data-heading="2">{{entry.icon if entry.icon else '📄'}}</span>
+        <span data-heading="4">{{entry.icon if entry.icon else '📄'}}</span>
     </div>
     <a data-link="noHover" class="story-card__title" href="/{{ entry.slug }}">{{ entry.name }}</a>
 </li>
