--- a/src/pages/sitemap.njk
+++ b/src/pages/sitemap.njk
@@ -1,13 +1,16 @@
 ---
 permalink: /sitemap.xml
-eleventyExcludeFromCollections: true
+title: Sitemap
+tags:
+    - webpage
+eleventyExcludeFromCollections: false
 ---
 <?xml version="1.0" encoding="utf-8"?>
 <urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
     {% for page in collections.all %}
         <url>
             <loc>{{ meta.site_url }}{{ page.url | url }}</loc>
-            <lastmod>{{ page.date.toISOString() }}</lastmod>
+            <lastmod>{{ page.story.edited.toISOString() if page.story else page.date.toISOString() }}</lastmod>
         </url>
     {% endfor %}
 </urlset>
