--- a/src/_includes/partials/site-head.njk
+++ b/src/_includes/partials/site-head.njk
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
     <meta name="theme-color" content="{{meta.theme_color}}">
     <meta name="apple-mobile-web-app-status-bar-style" content="{{meta.theme_color}}">
-    <meta name="title" content="{{title}}">
+    <meta name="title" content="{{meta.site_name + " - " + title or " "}}">
     <meta name="generator" content="{{ eleventy.generator }}">
     <!-- Open graph - Facebook 1200 x 628 -->
     <meta property="og:image" content="{{thumbnail or meta.site_thumbnail}}">
@@ -17,11 +17,11 @@
     <meta property="og:title" content="{{title or meta.site_name}}">
     <meta property="og:description" content="{{description or meta.site_description}}">
     <!-- Open graph - Twitter -->
-    <meta name="twitter:image" content="{{meta.site_thumbnail}}">
+    <meta name="twitter:image" content="{{thumbnail or meta.site_thumbnail}}">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:creator" content="{{meta.twitter_name}}">
     <meta name="twitter:site" content="{{meta.twitter_name}}">
-    <meta name="twitter:text:title" content="{{meta.title}}">
+    <meta name="twitter:text:title" content="{{meta.site_name + " - " + title or " " }}">
 
 
   <link rel="manifest" href="/manifest.json" />
