--- a/src/css/_tokens.css
+++ b/src/css/_tokens.css
@@ -30,6 +30,7 @@
   /* Custom pairs */
   --space-m-2xl: clamp(1.5rem, calc(0.23rem + 6.36vw), 5rem);
   --space-s-3xl: clamp(1rem, calc(-0.91rem + 9.55vw), 6.25rem);
+  --space-s-6xl: clamp(1.00rem, calc(-2.27rem + 16.36vw), 10.00rem);
 
   --measure: 80ch;
 
