--- a/src/css/style.njk
+++ b/src/css/style.njk
@@ -1,5 +1,6 @@
 ---
 permalink: css/style.css
+eleventyExcludeFromCollections: true
 ---
 {% include "./_fonts.css" %}
 {% include "./_tokens.css" %}
