--- a/src/css/_fonts.css
+++ b/src/css/_fonts.css
@@ -3,6 +3,7 @@
      font-family: 'Atkinson Hyperlegible';
      font-style: normal;
      font-weight: 400;
+     font-display: swap;
      src: local(''),
           url('../fonts/atkinson-hyperlegible-v9-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
           url('../fonts/atkinson-hyperlegible-v9-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -12,6 +13,7 @@
      font-family: 'Atkinson Hyperlegible';
      font-style: italic;
      font-weight: 400;
+     font-display: swap;
      src: local(''),
           url('../fonts/atkinson-hyperlegible-v9-latin-italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
           url('../fonts/atkinson-hyperlegible-v9-latin-italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -21,6 +23,7 @@
      font-family: 'Atkinson Hyperlegible';
      font-style: normal;
      font-weight: 700;
+     font-display: swap;
      src: local(''),
           url('../fonts/atkinson-hyperlegible-v9-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
           url('../fonts/atkinson-hyperlegible-v9-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -32,6 +35,7 @@
      font-family: 'Noto Emoji';
      font-style: normal;
      font-weight: 400;
+     font-display: swap;
      src: local(''),
           url('../fonts/noto-emoji-v26-emoji-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
           url('../fonts/noto-emoji-v26-emoji-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
@@ -41,6 +45,7 @@
      font-family: 'Noto Emoji';
      font-style: normal;
      font-weight: 600;
+     font-display: swap;
      src: local(''),
           url('../fonts/noto-emoji-v26-emoji-600.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
           url('../fonts/noto-emoji-v26-emoji-600.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
