--- a/src/pages/stories/story-page.njk
+++ b/src/pages/stories/story-page.njk
@@ -6,7 +6,7 @@ pagination:
     addAllPagesToCollections: true
 layout: layouts/base-layout.njk
 permalink: /{{story.slug}}/
-og_type: article
+og_type: "article"
 eleventyComputed:
     title: "{{ story.name | truncate(150) }} "
     thumbnail: "{{ story.cover }}?w=1200&h=628"
