--- a/src/pages/netlify.njk
+++ b/src/pages/netlify.njk
@@ -3,14 +3,14 @@ permalink: /netlify.toml
 eleventyExcludeFromCollections: true
 ---
 [[redirects]]
-  from = "{{meta.site_url}}/js/script.js"
+  from = "/js/script.js"
   to = "https://plausible.io/js/script.js"
   status = 200
 
 [[redirects]]
-  from = "{{meta.site_url}}/api/event"
+  from = "/api/event"
   to = "https://plausible.io/api/event"
-  status = 202
+  status = 200
 
 [[redirects]]
   from = "/*"
