--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -110,8 +110,12 @@ source: https://codepen.io/thierry/pen/qBqYmgw
 
 }
 [data-markdown] h3{
-  font-size: var(--step-1);
-  font-weight: normal;
+  font-size: var(--step-0);
+  /* font-weight: normal; */
+}
+[data-markdown] code{
+  border: 1px solid var(--gray-400);
+  background-color: var(--gray-200);
 }
 [data-markdown] > ol > li {
   flex-grow: 1;
